--- a/css/home.css
+++ b/css/home.css
@@ -20,12 +20,13 @@
 
 }
 
+
 /* Hide mobile menu and burger icon on large screens */
 .header-mobile {
   display: none;
 }
 
-/* 📱 Mobile and tablet styles (max-width: 375px) */
+/*  Mobile and tablet styles (max-width: 375px) */
 @media (max-width: 375px) {
 
   /* Hide default navigation links and Contact Us button on mobile */
@@ -171,14 +172,13 @@
   }
 }
 
-
 /* Media queries configurations for tablet (768px) */
 
 @media (max-width: 768px) {
 
 
   /* Header styles for tablets*/
-  header {
+  .header-main {
     font-family: "Livvic", sans-serif;
     width: 100%;
     height: 194px;
@@ -192,7 +192,7 @@
   .navbar {
     width: 100%;
     max-width: 689px !important; /* Adjusting width for tablet screens */
-    margin-top: 0px !important; /* Adding top margin */
+    margin-top: 72px !important; /* Adding top margin */
     height: 48px !important;
     display: flex;
     justify-content: space-between;
@@ -250,6 +250,7 @@
   }
 }
 
+
 /*bendras*/
 * {
   margin: 0px;
@@ -258,6 +259,11 @@
   font-optical-sizing: auto;
   font-style: normal;
 }
+html, body {
+  overflow-x: hidden;
+  width: 100%;
+}
+
 /*pagrindinis konteineris*/
 .container {
  position: relative;
@@ -1054,8 +1060,6 @@ overflow: hidden;
   }
 
 }
-
-
 @media (max-width: 768px) {
   .pic-one {
     display: none !important;
@@ -1238,3 +1242,4 @@ overflow: hidden;
     height: auto !important;
   }
 }
+
